tests/transpiler/x/scheme/len_string.scm
;; Generated by Mochi transpiler on 2025-07-19T11:53:20Z
(import (srfi 1))
(display (length "mochi"))
(newline)
